[package]
name = "rs"
version = "0.1.0"
authors = ["mohanson <mohanson@outlook.com>"]
edition = "2018"
default-run = "int"

[[bin]]
name = "int"
path = "src/main_int.rs"

[[bin]]
name = "asm"
path = "src/main_asm.rs"

[[bin]]
name = "aot"
path = "src/main_aot.rs"

[dependencies]
bytes = "0.5.4"
ckb-vm = { path = "/src/ckb-vm", features=["asm"] }
