[package]
name = "rs"
version = "0.1.0"
authors = ["mohanson <mohanson@outlook.com>"]
edition = "2018"
default-run = "int64"

[[bin]]
name = "int32"
path = "src/main_int32.rs"

[[bin]]
name = "int64"
path = "src/main_int64.rs"

[[bin]]
name = "asm"
path = "src/main_asm.rs"

[[bin]]
name = "aot"
path = "src/main_aot.rs"

[[bin]]
name = "mop"
path = "src/main_mop.rs"

[dependencies]
ckb-vm = { path="/src/ckb-vm", features=["asm"] }
